--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2>韦德的个人博客</h2>
         </header>
 
-        <img src="http://pixelbuddha.net/sites/default/files/freebie-slide/freebie-slide-1423471400-1.jpg">
+        <img src="http://huaban.com/go/?pin_id=331922817">
         <p>这里写内容</p>
 
         <footer>
