--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <title>Vvade.GitHub.io by vvade</title>
   </head>
 
-  <body>
+  <body huaban_collector_injected=“true” deta-tettr-rendered="ture">
     <div id="container">
       <div class="inner">
 
         <header>
-          <h1>vvade.github.io</h1>
-          <h2>韦德的个人博客</h2>
+          <h1>UI/UX DESIGN</h1>
+          <h2>simple</h2>
         </header>
 
-        <img src="http://huaban.com/go/?pin_id=331922817">
+        <img src="file:///H:/resume/pro/oppo/%E7%AE%80/yinyue.png">
         <p>这里写内容</p>
 
         <footer>
