--- a/index.html
+++ b/index.html
@@ -15,28 +15,22 @@
 
   <div class="intro">
     <ul>
-      <li class="animated bounceDownName">A</li>
-      <li class="animated bounceDownName">n</li>
-      <li class="animated bounceDownName">t</li>
-      <li class="animated bounceDownName">h</li>
-      <li class="animated bounceDownName">o</li>
-      <li class="animated bounceDownName">n</li>
-      <li class="animated bounceDownName">y</li>
-      <li class="animated bounceDownName">A</li>
-      <li class="animated bounceDownName">u</li>
-      <li class="animated bounceDownName">b</li>
+      <li class="animated bounceDownName">W</li>
+      <li class="animated bounceDownName">a</li>
+      <li class="animated bounceDownName">d</li>
       <li class="animated bounceDownName">e</li>
-      <li class="animated bounceDownName">r</li>
-      <li class="animated bounceDownName">t</li>
-      <li class="animated bounceDownName">i</li>
+      <li class="animated bounceDownName">W</li>
+      <li class="animated bounceDownName">a</li>
       <li class="animated bounceDownName">n</li>
+      <li class="animated bounceDownName">g</li>
+      
     </ul>
     <span class="coming animated fadeInDown">UI/UX Designer</span>
   </div>
 
   <div class="about animated">
     
-    <span class="dribbble">I'm looking for a fulltime job, check my work on <a href="http://www.dribbble.com/noxdzine/">Dribbble</a><br />then <a href="mailto:anthony.aubertin@gmail.com?subject=[anthonyaubertin.com] Work inquiry">hire me!</a>
+    <span class="dribbble"> check my work on <a href="https://www.behance.net/wadeND">Behance</a><br />then <a href="mailto:anthony.aubertin@gmail.com?subject=[anthonyaubertin.com] Work inquiry">hire me!</a>
     </span>
   </div>
 </div>
