--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>Anthony Aubertin - UI/UX Designer - Paris</title>
+      <title>Wade Wong - UI/UX Designer - Paris</title>
       <meta charset=utf-8 />
       <link rel="stylesheet" type="text/css" href="css/reset.css" />
       <link rel="stylesheet" type="text/css" href="css/anim.css" />
