--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li class="animated bounceDownName">d</li>
       <li class="animated bounceDownName">e</li>
       <li class="animated bounceDownName">W</li>
-      <li class="animated bounceDownName">a</li>
+      <li class="animated bounceDownName">o</li>
       <li class="animated bounceDownName">n</li>
       <li class="animated bounceDownName">g</li>
       
