--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 <link rel="alternate" media="handheld" href="#" />
 <meta charset="utf-8">
 
-<title>王伟东的简历-拉勾网-最专业的互联网招聘平台</title>
-<meta content="拉勾网是3W旗下的互联网领域垂直招聘网站" name="description">
-<meta content="拉勾,拉勾网,拉勾招聘,拉钩, 拉钩网 ,互联网招聘,拉勾互联网招聘, 移动互联网招聘, 垂直互联网招聘, 微信招聘, 微博招聘, 拉勾官网, 拉勾百科,跳槽, 高薪职位, 互联网圈子, IT招聘, 职场招聘, 猎头招聘,O2O招聘, LBS招聘, 社交招聘, 校园招聘, 校招,社会招聘,社招" name="keywords">
 </head>
 <body>
 <div id="body">
@@ -394,7 +391,7 @@ content:"...";
 						<span class="mr_name">王伟东</span>
 					</div>
 					<div class="mr_p_introduce mr_w604 clearfixs">
-						<span class="mr_intro">两年完整app交互到视觉设计</span>
+						<span class="mr_intro">交互到视觉设计</span>
 					</div>
 					<div class="mr_p_info mr_infoed mr_w604 clearfixs">		
 						<div class="info_t">
