--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ content:"...";
 						<span class="mr_name">王伟东</span>
 					</div>
 					<div class="mr_p_introduce mr_w604 clearfixs">
-						<span class="mr_intro">交互到视觉设计</span>
+						<span class="mr_intro">交互/视觉设计</span>
 					</div>
 					<div class="mr_p_info mr_infoed mr_w604 clearfixs">		
 						<div class="info_t">
