--- a/index.html
+++ b/index.html
@@ -334,11 +334,8 @@
 				<div class="col-lg-3">
 					<p><sm>SOCIAL LINKS</sm></p>
 					<p>
-						<a href="#"><i class="icon-dribbble"></i></a>
-						<a href="#"><i class="icon-twitter"></i></a>
-						<a href="#"><i class="icon-facebook"></i></a>
-						<a href="#"><i class="icon-linkedin"></i></a>
-						<a href="#"><i class="icon-apple"></i></a>
+						<a href="https://www.behance.net/wadeND"><i class="icon-dribbble"></i></a>
+						<a href="https://dribbble.com/vvade"><i class="icon-twitter"></i></a>
 
 					</p>
 				</div>
