--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					<h5>PORTFOLIO</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><img class="img-responsive" src="assets/img/port01.jpg" alt=""></p>
+					<p><img class="img-responsive" src="file:///C:/Users/Administrator/Desktop/vvade.github.io/assets/img/port01.jpg" alt=""></p>
 				</div>
 				<div class="col-lg-3">
 					<p>Hai360 海外购</p>
