--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
 				</div>
 				<div class="col-lg-3">
 					<p>Hai360 海外购</p>
-				<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
+				<p><more>Hai360海外购——全球购物第一站，致力于为国内消费者提供快捷、简单、值得信赖的海外正品购物体验。
+                         让您可以直接购买如Amazon、6PM、Vitacost、Beauty、GNC等海外电商平台数百万款品牌商品，享受实时汇率同步海外价格，零手续费。<br/><br/>
 					<sm><i class="icon-tag"></i> App design</sm></more> 
 				</p>
 				</div>
@@ -290,7 +291,7 @@
 				</div>
 				<div class="col-lg-3">
 						<p>Flowerdance</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
+					<p><more>简洁的鲜花购物网站设计<br/><br/>
 						<sm><i class="icon-tag"></i> Web design</sm></more> 
 					</p>
 				</div>
@@ -300,7 +301,7 @@
 				</div>
 				<div class="col-lg-3">
 						<p>oppo icons</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
+					<p><more>13年为oppo做的主题图标，当时ios7刚刚出来，扁平化大行其道，斜投影与渐变在当时可谓最流行的样式~<br/><br/>
 						<sm><i class="icon-tag"></i> icon design</sm></more> 
 					</p>
 				</div>
